--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">LAB_WEEK_02_A</string>
+    <string name="app_name">Tugas_LAB_WEEK_02_A</string>
 </resources>
